@@ -41,6 +41,7 @@
   def (WM_DELETE_WINDOW)
   def (WM_PROTOCOLS)
   def (PROPERTY_NOTIFY)
+  def (RESIZE_ALL_WINDOWS)
 
   def (XIM_PREEDIT_START)
   def (XIM_PREEDIT_DONE)
